<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_services"
                android:icon="@drawable/uslugi"
                android:title="@string/nav_services"/>

        <item
                android:id="@+id/nav_price"
                android:icon="@drawable/price"
                android:title="@string/nav_price"/>

        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/otzivy"
                android:title="@string/nav_feedback"/>

        <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/kontakty"
                android:title="@string/nav_contacts"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share"/>

            <item
                    android:id="@+id/nav_improve"
                    android:icon="@drawable/ic_send"
                    android:title="@string/improve"/>

        </menu>
    </item>

</menu>