<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            style="@style/BaseTextStyle.DialogHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/text_secondary_dark">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                style="@style/BaseTextStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/BaseTextStyle.DialogHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone"
            android:textColorHint="@color/text_secondary_dark">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                style="@style/BaseTextStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_time"
            style="@style/BaseTextStyle.DialogHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/time_to_call"
            android:textColorHint="@color/text_secondary_dark">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_time"
                style="@style/BaseTextStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="time"
                android:maxLength="5"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>